Fix big gap in Resume sections

--- a/styles.css
+++ b/styles.css
@@ -284,7 +284,7 @@ div.container {
   height: 100vh; /* Adjust to fit the viewport */
   width: 100%;
   padding-top: 50px;
-  padding-bottom: 50px;
+  padding-bottom: 20px;
 }
 
 .resume iframe {
